<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_bodyprogress"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bodyprogress" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_fitness"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_food"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
